sfdx-project/force-app/main/default/objects/Keyburn_Setting__mdt/Keyburn_Setting__mdt.object-meta.xml
<CustomObject>
    <label>Keyburn Setting</label>
    <pluralLabel>Keyburn Settings</pluralLabel>
</CustomObject>