sfdx-project/force-app/main/default/objects/Keyburn_Setting__mdt/fields/Average_Speed_Kmh__c.field-meta.xml
<CustomField>
    <fullName>Average_Speed_Kmh__c</fullName>
    <label>Average Speed Kmh</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>