sfdx-project/force-app/main/default/objects/Keyburn_Setting__mdt/fields/Demo_Inbox__c.field-meta.xml
<CustomField>
    <fullName>Demo_Inbox__c</fullName>
    <label>Demo Inbox</label>
    <description>Mailbox that receives verification codes for demo contacts. An @example.com address is routed to a plus-alias of it, so one inbox receives every code and the eval data keeps its original addresses. Blank = send to the contact's own address.</description>
    <type>Email</type>
</CustomField>