sfdx-project/force-app/main/default/objects/Keyburn_Setting__mdt/fields/Google_Maps_Api_Key__c.field-meta.xml
<CustomField>
    <fullName>Google_Maps_Api_Key__c</fullName>
    <label>Google Maps API Key</label>
    <length>120</length>
    <type>Text</type>
</CustomField>