sfdx-project/force-app/main/default/objects/Keyburn_Setting__mdt/fields/Warehouse_Label__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Label__c</fullName>
    <label>Warehouse Label</label>
    <length>120</length>
    <type>Text</type>
</CustomField>