sfdx-project/force-app/main/default/objects/Keyburn_Setting__mdt/fields/Warehouse_Latitude__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Latitude__c</fullName>
    <label>Warehouse Latitude</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>